API Create/Update/Delete remind for user
